fix mobile men z-index (issue was in header index)

--- a/pt-web/src/components/Header/Header.module.scss
+++ b/pt-web/src/components/Header/Header.module.scss
@@ -3,7 +3,6 @@
 
 .header {
   top: 0;
-  z-index: 5;
   width: 100%;
   background-color: #fff;
   border-bottom: 1px solid #e0e0e0;
